--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House Groove Core Drum Sequencer</title>
+    <title>House Groove Sequencer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Rajdhani:wght@500;700&display=swap');
@@ -270,7 +270,7 @@
 </head>
 <body>
 
-    <h1>House Groove Drum Sequencer</h1>
+    <h1>House Groove Sequencer</h1>
 
     <div class="sequencer-container">
         <!-- Controls -->
